# SecretTyping

./: .gitignore  README.md  a.out  anothertemp.cpp  anothertemp.hpp  con  constructor.cpp  example.py  hjd.cpp  numatype.hpp  out.txt  perf.data  perf.data.old  perf_list.txt  runExperiments.py  runSTExperiments.py  temp  temp.cpp  temp2.cpp
Exprs/: meta.py  out.txt
Graphs/: NumaBST.csv  graph.py
Output/: out.txt  valgrind_output.txt
Perfs/: final_perf_results.csv  local_remote_numa_numa.csv  local_remote_numa_numa.txt  local_remote_numa_regular.csv  local_remote_numa_regular.txt  local_remote_numa_reverse.csv  local_remote_numa_reverse.txt  local_remote_regular_numa.csv  local_remote_regular_numa.txt  local_remote_regular_regular.csv  local_remote_regular_regular.txt  local_remote_regular_reverse.txt  local_remote_reverse_numa.csv  local_remote_reverse_numa.txt  local_remote_reverse_regular.csv  local_remote_reverse_regular.txt  perf_stat.py
Result/: Exprs.csv  cast  (+19 more)
numa-clang-tool/src/: CMakeLists.txt  main.cc
numa-clang-tool/src/actions/: cast_frontendaction.cc  cast_frontendaction.h  frontendaction.cc  frontendaction.h
numa-clang-tool/src/consumer/: cast_consumer.cc  cast_consumer.h  consumer.cc  consumer.h
numa-clang-tool/src/inclusiondirective/: Excludeheader.cpp  Excludeheader.h  inclusiondirective.cc  inclusiondirective.h
numa-clang-tool/src/transformer/: NumaTargetNumaPointer.cc  NumaTargetNumaPointer.h  RecursiveNumaTyper.cc  RecursiveNumaTyper.h  templateargtransformer.cc  templateargtransformer.h
numa-clang-tool/src/utils/: utils.cc  utils.h
(+525 files in other folders)
